--- a/style.css
+++ b/style.css
@@ -2,16 +2,9 @@
      width: 9%;
      
 }
-.info-box a{
-    text-decoration: none;
-    color: #525252;
-    margin-left: 5px;
-    margin-right: 5px;
-    
-}
 .contact-info{
     width: 100%;
-    background-color: gainsboro;
+    background-color: rgba(206, 205, 205,0.3);
     border-bottom: 1px solid rgb(255, 255, 255);
     display: flex;
     justify-content: space-around;
@@ -23,6 +16,13 @@
     font-weight: bold;
     display: flex;
     width: 40%;
+}
+.info-box a{
+    text-decoration: none;
+    color: #525252;
+    margin-left: 5px;
+    margin-right: 5px;
+    
 }
 .btn{
     color: #000;
@@ -45,39 +45,35 @@
 .nav-bar img{
     width: 30%;
 }
-.box{
-    width: 20%;
-}
 .nav-bar{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
-.box2  li , a{
+.nav-box{
+    width: 60%; 
+    display: flex;
+    transition: 1s;
+}
+
+.nav-box  li , a{
    list-style: none;
    text-decoration: none;
    color: #000000;
 }
-.box2 ul{
+.nav-box ul{
     display: flex;
     align-items: center;
-    transition: 1s;
+    gap: 25px;
+    margin-top: 16px;
 }
-.box2{
-    width: 60%;
-    display: flex;
-}
-.box2 li a:hover{
+.nav-box ul a:hover{
     border-bottom: 3px solid #1cf11c;
     border-radius: 0%;
 }
-.box2 ul{
-    /* border-bottom: 1px solid red; */
-    display: flex;
-    gap: 25px;
-    margin-top: 16px;
-    /* padding: 10px; */
-    /* height: 10px; */
+#blue-color{
+    color: #0000ff;
 }
 .button{
     display: flex;
@@ -87,7 +83,7 @@
     padding: 15px;
     border-radius: 6px;
     border: none;
-    background-color: rgba(65, 65, 221, 0.8);
+    background-color: #4141ddcc;
     color: #ffff;
     transition: transform 0.5s;
 }
@@ -96,6 +92,55 @@
 }
 /* Nav-bar ended  */
 
+/* markking box started */
+
+  .banner-container{
+    /* border: 1px solid red; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 15px;
+  }
+  .banner-container div{
+    /* border: 1px solid green; */
+    width: 38%;
+  }
+ .content-box{
+    /* margin: auto; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+ }
+ .content-box a{
+    border: 1px solid #000000;
+    width: 40%;
+    border-radius: 4px;
+    height: 50px;
+    text-align: center;
+    padding-top: 12px;
+    transition: 0.5s;
+ }
+ .content-box a:hover{
+    box-shadow: 1px 1px 5px  #000000;
+    border: none;
+ }
+ .content-box a>img{
+    margin-left: 5px;
+ }
+  .hero-pic{
+    width: 100%;
+  }
+  .right-arrow{
+    width: 10%;
+  }
+  #grenn{
+    color: #7ccc5c;
+  }
+
+/* markking box ended */
+
+ 
 
 
 /* medai quaries :started */
@@ -120,6 +165,61 @@
    }
    .dropdown{
     padding-right: 10px;
+   }
+   .nav-bar img{
+       margin-left: 3px;
+       width: 90%;
+   }
+   .nav-bar{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+   }
+   .nav-box{
+    display: flex;
+    flex-direction: column;
+   }
+   .nav-box ul{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding-left: 20px;
+   }
+   .nav-box ul a:hover{
+    background-color: rgba(206, 205, 205,0.3);
+    border: none;
+    padding: 10px;
+    transition: 0.2s;
+   }
+   .button{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+   }
+   .bto{
+    margin-left: 10px;
+    margin-right: 10px;
+   }
+   .content-img{
+    display: none;
+   }
+   .banner-container>div{
+     width: 90%;
+     margin-top: 30px;
+     font-size: 13px;
+   }
+   .fonts{
+     font-size: 28px;
+   }
+   .font{
+    font-size: 17px;
+   }
+   .content-box a{
+    padding-top: 9.5px;
+    width: 40%;
+    height: 40px;
    }
 }  
 
